# Sentrywatch-firewall

./: .gitignore  README.md  pyproject.toml
sentrywatch/: __init__.py  __main__.py  cli.py  config.py
sentrywatch/attribution/: __init__.py  reputation.py
sentrywatch/audit/: __init__.py  logger.py  verifier.py
sentrywatch/db/: __init__.py  connection.py  repository.py  schema.py
sentrywatch/decision/: __init__.py  allowlist.py  evaluator.py
sentrywatch/decision/firewall/: __init__.py  base.py  iptables.py  nftables.py  simulator.py
sentrywatch/engine/: __init__.py  detector.py  rule.py
sentrywatch/engine/rules/: __init__.py  anomalous_out.py  brute_force.py  port_scan.py  priv_esc.py  suspicious_proc.py
sentrywatch/ingest/: __init__.py  file_tailer.py  normalizer.py  simulator.py
sentrywatch/notification/: __init__.py  dispatcher.py  evaluator.py  payload.py
sentrywatch/notification/channels/: __init__.py  base.py  notify_send.py  terminal.py  webhook.py
sentrywatch/scoring/: __init__.py  client.py
sentrywatch/ui/: __init__.py  app.py  views.py
tests/: __init__.py  test_audit.py  test_db.py  test_decision.py  test_notification.py  test_reputation.py  test_rules.py  test_scoring.py
